<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds ="true"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#99d785d1"
        android:text="@string/button"
        android:textColor="#FF0fbc9c"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/stop"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#99d785d1"
        android:textColor="#FF0fbc9c"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/stop"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/p1"
        android:layout_width="107dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1NameTag"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[14]" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/p2"
        android:layout_width="107dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2nameTag"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars[12]" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/background"
        android:layout_width="344dp"
        android:layout_height="209dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/dice"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:layout_constraintVertical_bias="0.684"/>

    <TextView
        android:id="@+id/p2nameTag"
        android:layout_width="155dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/p2name"
        android:textAlignment="center"
        android:textColor="#be5a84"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/p1NameTag"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/p1name"
        android:textAlignment="center"
        android:textColor="#be5a84"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/author"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/timeTag"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/p1point"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="109dp"
        android:layout_height="13dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/p2point"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="109dp"
        android:layout_height="13dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/currentpoint"
        android:layout_width="101dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#be5a84"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/currentpointTag"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Your Point"
        android:textStyle="bold"
        android:textColor="#FF0fbc9c"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/currentpoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/mute"
        android:layout_width="86dp"
        android:layout_height="27dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="M U T E "
        android:textAlignment="center"
        android:textColor="#FF0fbc9c"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/changeMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/changeMusic"
        android:layout_width="85dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#33d785d1"
        android:text="&#45;	&#62;  D ❤️ J  &#60;&#45;️️"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="#FF0fbc9c"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" /> <![CDATA[





    "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="104dp" />



]]>
</android.support.constraint.ConstraintLayout>